Fixed on mobile screens

--- a/css/younglife.css
+++ b/css/younglife.css
@@ -567,6 +567,13 @@ img {
   }
 }
 
+@media screen and (max-width: 568px) {
+  .whoweare {
+    grid-template-columns: repeat(3, minmax(80px, 1fr));
+    grid-gap: 10px;
+  }
+}
+
 .info-text--clubs {
   margin: 0 auto;
   padding-bottom: 50px;
